# non-technical-compose-wrapper

./: .gitignore  Cargo.toml  README.md  configuration.json  docker-compose.yaml  notes.md
src/: configurations.rs  helpers.rs  main.rs
src/components/: auto_form.rs  file_picker.rs  mod.rs  page_header.rs  service_card.rs
src/screens/: entry.rs  mod.rs  router.rs  services.rs
